Fix z-index affecting links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,6 @@ body.sign-up li.sign-up a {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: -1;
 }
 
 #welcome-box {
@@ -188,7 +187,6 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: -1;
 }
 
 #rides-box {
